# pydantic_settings_demo

./: README.md  main.py  pyproject.toml
page_6/: config.py
src/: config.py
